added the Landing page

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock title %} | PlanIt</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="{% static 'index.js' %}" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     {% block head %}{% endblock head %}
 </head>
 
