--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     {% include 'fragments/navbar.html' %}
-    {% include 'fragments/messages.html' %}
+    <!-- {% include 'fragments/messages.html' %} -->
     {% block body %}{% endblock body %}
 </body>
 
